--- a/converter.css
+++ b/converter.css
@@ -432,6 +432,7 @@ transition: all .2s ease-in-out;
   }
   .block {
     width: 23%;
+    position: center;
     border-radius: 120px;
     border: 2px solid transparent;
     background-color: rgba(0, 0, 0, 0.5);
@@ -440,7 +441,8 @@ transition: all .2s ease-in-out;
     cursor: pointer;
     text-align: center;
     margin-top: 390px;
-    margin-left: 965px;
+    margin-left: 975px;
+    margin-right:65px;
     color:#f5f5f5;
     
   }
